<resources>
    <string name="app_name">DonationTracker2</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome">Welcome!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_registration">Sign in</string>
    <string name="retype_password">Retype Password</string>
    <string name="logout">Logout</string>
    <string name="hello">Hello!</string>
    <string name="prompt_Password">Password</string>
    <string name="email_Taken">This email is already registered</string>
    <string name="error_unregistered_email">Incorrect or unregistered email</string>
    <string name="user_info">User info</string>
    <string name="user_type">User Type:</string>
    <string name="textview">TextView</string>
    <string name="locations">Locations</string>
    <string name="title_location_list">Locations</string>
    <string name="title_location_detail">Location Detail</string>
    <string name="title_activity_add_donation">AddDonation</string>
    <string name="name">Item Name</string>
    <string name="date">Date</string>
    <string name="item_type">Item Type:</string>
    <string name="value">Price</string>
    <string name="description">Description of Item</string>
    <string name="location">Location</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="donations">Donations</string>
    <string name="title_donations_list">Items</string>
    <string name="title_donations_detail">Donations Detail</string>
    <string name="filter">Filter</string>
    <string name="search_for_donation">Search for Donation</string>
    <string name="title_activity_google_maps">Map</string>

</resources>
